--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,9 @@
 # Docker
-# Build a Docker image
+# Build a Docker image 
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- main
+- master
 
 resources:
 - repo: self
@@ -14,45 +14,40 @@ variables:
 stages:
 - stage: Build
   displayName: Build image
-  jobs:
+  jobs:  
   - job: Build
     displayName: Build
     pool:
-      vmImage: ubuntu-latest
+      vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
       inputs:
-        containerRegistry: 'manidockerhub'
-        repository: 'manikrish/weatherapi'
+        containerRegistry: 'Binarythistle Docker Hub'
+        repository: 'binarythistle/weatherapi'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         tags: |
           $(tag)
-- stage: dev
-  display name: "tf on azure"
-  dependson: Build
+- stage: Provision
+  displayName: 'Terraforming on Azure...'
+  dependsOn: Build
   jobs:
-  - jobs: dev
-    displayname: "dev deployment"
-    pool: 
+  - job: Provision
+    displayName: 'Provisioning Container Instance'
+    pool:
       vmImage: 'ubuntu-latest'
     variables: 
-    - group: TerraformEnvVars
-    steps: 
+    - group: TeraformEnvVars
+    steps:
     - script: |
         set -e
-
         terraform init -input=false
         terraform apply -input=false -auto-approve
-      
-      name: 'run terraform'
-      displayname: 'Run Terraform'
+      name: 'RunTerraform'
+      displayName: 'Run Terraform'
       env:
         ARM_CLIENT_ID: $(ARM_CLIENT_ID)
         ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
-        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
         ARM_TENANT_ID: $(ARM_TENANT_ID)
-
-
-
-
+        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+        TF_VAR_imagebuild: $(tag)
